<resources>
    <string name="app_name">Carrito</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>

    <string name="message_desproduct">Descripción del Producto</string>
    <string name="message_cantidad">Cantidad</string>
    <string name="message_precio">Precio</string>
    <string name="message_Total">Total</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
</resources>
