<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alumnos.carrito.Register"
    tools:showIn="@layout/activity_register">


    <TextView
        android:id="@+id/desproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_desproduct" />

    <EditText
        android:id="@+id/txtdesProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/desproduct"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_cantidad"
        android:layout_marginBottom="42dp"
        android:layout_alignBottom="@+id/txtcantidad"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtcantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/txtdesProd"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_precio"
        android:layout_below="@+id/cantidad"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtprecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/precio"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/desproduct"
        android:layout_centerVertical="true"
        android:layout_marginEnd="27dp"
        android:text="@string/btn_guardar" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar"
        android:layout_alignBaseline="@+id/btnguardar"
        android:layout_alignBottom="@+id/btnguardar"
        android:layout_toEndOf="@+id/btnguardar"
        android:layout_marginStart="21dp" />
</RelativeLayout>
